# measuring_capacity_app

./: .env.example  .gitignore  MVP_STATUS.md  PROJECT_CONFIG.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/instructions/: database-layer.instructions.md  gui-layer.instructions.md  project-architecture.instructions.md
scripts/: seed_database.py  test_database.py
src/: main.py
src/database/: crud.py  database.py  models.py
src/gui/: __init__.py  activity_list.py  confirm_dialog.py  edit_activity_dialog.py  input_dialog.py  log_panel.py  main_window.py  new_activity_dialog.py  new_project_task_dialog.py  planner_window.py  routine_dialog.py  tracking_dialog.py  tracking_dialog_old.py  tracking_panel.py  user_selection_dialog.py
src/utils/: app_logger.py
tests/: test_crud.py
